Import i18n from previous project

--- a/SmartList/app/src/main/res/values/strings.xml
+++ b/SmartList/app/src/main/res/values/strings.xml
@@ -1,8 +1,59 @@
 <resources>
     <string name="app_name">SmartList</string>
-
-    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="btnNewList">New Shopping List</string>
+    <string name="btnOpenLists">Open previous saved Lists</string>
+    <string name="btnNewShop">Shop now</string>
+    <string name="btnExit">Exit app</string>
+    <string name="btnPreviousShop">View previous Shopping</string>
+    <string name="txvNewList">New List</string>
+    <string name="txtListName">Enter a List name</string>
+    <string name="btnAddList">Save and add products</string>
+    <string name="txtProductName">Search by product name</string>
+    <string name="txtSearchCategory">Or its category</string>
+    <string name="txtAddProductTitle">Add Products</string>
+    <string name="chkAddProd">Add</string>
+    <string name="txtItems">Items</string>
+    <string name="txtListasSalvas">Saved Lists</string>
+    <string name="textApagar">Delete item</string>
+    <string name="notifyAddedProd">" Added to list!"</string>
+    <string name="notifyErrorAddProd">Error: Can\'t add the product</string>
+    <string name="notifyRemoveProd">Product removed</string>
+    <string name="notifyErrorRemoveProd">Error: Can\'t remove the product</string>
+    <string name="notifyListSaved">List saved</string>
+    <string name="notifyErrorListSaved">Error: Can\'t save the list</string>
+    <string name="sqlReturnNull">No</string>
+    <string name="txtComprasEfetuadas">Previous Shopping</string>
+    <string name="UnidadeMonet">$</string>
+    <string name="infSmartShop">Smart Shopping</string>
+    <string name="infMakeSmartShop">Create Smart Shopping</string>
+    <string name="infSeqShop">Sequential Shopping</string>
+    <string name="txtShoppingList">Shopping List</string>
+    <string name="txtListContextMenu">List Options</string>
+    <string name="ActionDelete">Delete</string>
+    <string name="ContextConfirmListDelete">Deleted</string>
+    <string name="ContextConfirmErrorListDelete">Error: Can\'t delete</string>
+    <string name="txvConfirmDeleteList">Do you really want to delete this list?</string>
+    <string name="Yes">Yes</string>
+    <string name="No">No</string>
+    <string name="txvSeqCompra">Sequential Shopping</string>
+    <string name="txvSelectList">Select a list</string>
+    <string name="notifyErrorShopp">Error while creating shopping</string>
+    <string name="txtShoppingCart">Shopping Cart</string>
+    <string name="txtDescTotal">Total $</string>
+    <string name="txtDescQtde">Quantity</string>
+    <string name="HintQtde">E.g.: 1, 2, 10</string>
+    <string name="AddToCart">Add to Cart</string>
+    <string name="txtUnitPrice">Unit price</string>
+    <string name="txtTotalItem">Item total $</string>
+    <string name="notifyCartProductAdded">Product added to cart</string>
+    <string name="notifyErrorAddCartProduct">Error: Can\'t add the product to cart</string>
+    <string name="txvInfSmartList">Smart List</string>
+    <string name="txvInfMakeaSmart">Building Smart List</string>
+    <string name="txvSelectIntList">Select a Smart List</string>
+    <string name="txvDescDate">Date</string>
+    <string name="txvDescListaBase">Base List</string>
+    <string name="txvDescVlr">Total</string>
+	<string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_settings">Settings</string>
 </resources>
