--- a/SmartList/app/src/main/res/values/strings.xml
+++ b/SmartList/app/src/main/res/values/strings.xml
@@ -53,7 +53,10 @@
     <string name="txvDescDate">Date</string>
     <string name="txvDescListaBase">Base List</string>
     <string name="txvDescVlr">Total</string>
-	<string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
