--- a/SmartList/app/src/main/res/values/strings.xml
+++ b/SmartList/app/src/main/res/values/strings.xml
@@ -58,5 +58,7 @@
     <string name="action_settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="menuHelp">Help</string>
+    <string name="menuTutorial">Step by Step</string>
 </resources>
