--- a/SmartList/app/src/main/res/values-pt/strings.xml
+++ b/SmartList/app/src/main/res/values-pt/strings.xml
@@ -60,4 +60,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menuHelp">Ajuda</string>
     <string name="menuTutorial">Passo a passo</string>
+    <string name="LeavingAppWarning">Pressione o voltar novamente para fechar o aplicativo</string>
 </resources>
