--- a/SmartList/app/src/main/res/values/strings.xml
+++ b/SmartList/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="menuHelp">Help</string>
     <string name="menuTutorial">Step by Step</string>
+    <string name="LeavingAppWarning">Press back again to leave</string>
 </resources>
