--- a/SmartList/app/src/main/res/values-pt/strings.xml
+++ b/SmartList/app/src/main/res/values-pt/strings.xml
@@ -64,4 +64,5 @@
     <string name="actionDelete">Excluir</string>
     <string name="optionsDesc">Opções</string>
     <string name="btnMarketCart">Carrinho de compras</string>
+    <string name="contextRemoveCart">Remover do carrinho</string>
 </resources>
