--- a/SmartList/app/src/main/res/values/strings.xml
+++ b/SmartList/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="actionDelete">Delete</string>
     <string name="optionsDesc">Options</string>
     <string name="btnMarketCart">Market cart</string>
+    <string name="contextRemoveCart">Remove from cart</string>
 </resources>
